<resources>
    <string name="app_name">Track Expenses</string>
    <string name="home_title">Trang chủ</string>
    <string name="track_expenses">Track Expenses</string>
    <string name="add_title">Thêm mới</string>
    <string name="balance_total_title">Tổng số dư</string>
    <string name="thong_tin">Thông tin chi tiêu</string>
    <string name="thu_nhap">Thu nhập tháng</string>
    <string name="history">Lịch sử</string>
    <string name="report">Thống kê</string>
    <string name="setting">Setting</string>
    <string name="_0">0đ</string>
    <string name="chi_tieu">Chi tiêu tháng</string>
    <string name="so_tien_da_tieu">Số tiền đã tiêu trong ngày:</string>
    <string name="_50_000">50.000đ</string>
    <string name="save">Lưu</string>
    <string name="history1">Lịch sử</string>
    <string name="thiet_lap_chi_tieu_trong_ngay">Thiết lập chi tiêu trong ngày</string>
    <string name="mua_1_lon_bia">Mua 1 lon bia</string>
    <string name="thu">Thu</string>
    <string name="chi">Chi</string>
    <string name="_25_000">25.000đ</string>
    <string name="them_sua_thu_chi">Thêm/sửa thu chi</string>
    <string name="so_tien">Số tiền:</string>
    <string name="nhap_so_tien">Nhập số tiền</string>
    <string name="danh_muc">Danh mục:</string>
    <string name="them">Thêm</string>
    <string name="xoa_danh_muc">Xóa</string>
    <string name="muc_khac">Mục khác</string>
    <string name="mua_sam">Mua sắm</string>
    <string name="do_uong">Đồ uống</string>
    <string name="do_xang">Đổ xăng</string>
    <string name="tien_nha">Tiền nhà</string>
    <string name="loai">Loại:</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="chi_tien">Chi tiền</string>
    <string name="_10_000">10.000đ</string>
    <string name="so_tien_da_chi">Số tiền đã chi:</string>
    <string name="_100_000">100.000đ</string>
    <string name="tong_chi">Tổng chi:</string>
    <string name="tong_thu">Tổng thu:</string>
    <string name="bao_cao_hom_nay">Báo cáo hôm nay (15/08/2024)</string>
    <string name="so_tien_con_lai">Số tiền còn lại:</string>
    <string name="thong_ke">Thống kê</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="thiet_lap_chi_tieu_trong_thang">Thiết lập chi tiêu trong tháng</string>
    <string name="thiet_lap_mau_sac">Thiết lập màu sắc</string>
    <string name="thiet_lap_co_chu">Thiết lập cỡ chữ</string>
    <string name="quan_ly_du_lieu">Quản lý dữ liệu</string>
    <string name="xoa_du_lieu">Xóa dữ liệu</string>
    <string name="noi_dung">Xóa toàn bộ dữ liệu để thu chép thu chi lại từ đầu(không thể phục hồi sau khi xóa)</string>
    <string name="ho_tro">Hỗ trợ</string>
    <string name="noi_dung_ho_tro">Các bạn hãy gửi hỗ trợ tới địa chỉ email dưới đây khi thông báo lỗi hay góp ý tới ứng dụng nhé:</string>
    <string name="email">hotro.quanlychitieu@gmail.com</string>
    <string name="content_noi_dung">Nội dung:</string>
    <string name="time">Thời gian:</string>
    <string name="chon_tac_vu_thuc_hien">Chọn tác vụ thực hiện</string>
    <string name="danh_muc_1">Danh mục</string>
    <string name="sua_thu_chi">Sửa thu chi</string>
    <string name="xoa_ban_ghi">Xóa bản ghi</string>
    <string name="dong_lai">Đóng lại</string>
    <string name="nhap_tim_kiem">Nhập tìm kiếm theo ngày</string>
</resources>