<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12dp"
        android:background="@drawable/shape_thong_tin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/danh_muc_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chon_tac_vu_thuc_hien"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/dp16"
            android:background="@color/black" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/sua_thu_chi"
            android:textColor="@color/color_009CDF"
            android:textSize="@dimen/_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/btnDeleteRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/xoa_ban_ghi"
            android:backgroundTint="@color/white"
            android:textColor="@color/color_009CDF"
            android:textSize="@dimen/_16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_thong_tin"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginHorizontal="@dimen/_12dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/dong_lai"
            android:textColor="@color/color_009CDF"
            android:textSize="@dimen/_16sp" />

    </LinearLayout>
</LinearLayout>