<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:id="@+id/catalog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_account"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvCatalogItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/muc_khac"
            android:textColor="@color/xam"
            android:textSize="@dimen/_14sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/ngang2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/xam"
            android:text=""/>

        <TextView
            android:id="@+id/shopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mua_sam"
            android:textColor="@color/xam"
            android:textSize="@dimen/_14sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/ngang3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/xam"
            android:text=""/>

        <TextView
            android:id="@+id/drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/do_uong"
            android:textColor="@color/xam"
            android:textSize="@dimen/_14sp" />
        <TextView
            android:id="@+id/ngang4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/xam"
            android:text=""/>

        <TextView
            android:id="@+id/refuel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/do_xang"
            android:textColor="@color/xam"
            android:textSize="@dimen/_14sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/ngang5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/xam"
            android:text=""/>

        <TextView
            android:id="@+id/rent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tien_nha"
            android:textColor="@color/xam"
            android:textSize="@dimen/_14sp"
            android:gravity="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>