<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frStatistical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_84dp"
        android:background="#F7FD3665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvHistory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/cai_dat"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4dp"
        android:text="@string/add_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvHistory1"
        app:layout_constraintEnd_toStartOf="@id/imSearch"
        app:layout_constraintTop_toTopOf="@id/tvHistory1" />

    <ImageView
        android:id="@+id/imSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:contentDescription="@string/add_title"
        android:scaleType="fitXY"
        android:src="@drawable/search_icon"
        app:layout_constraintBottom_toBottomOf="@id/tvAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAdd" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-30dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frStatistical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_group_expenses"
            android:orientation="vertical"
            android:paddingVertical="@dimen/dp16">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctExpensesInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dp16"
                android:background="@drawable/shape_account_not_stroke"
                android:padding="@dimen/_16dp">

                <TextView
                    android:id="@+id/setmonthlyspending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thiet_lap_chi_tieu_trong_thang"
                    android:textStyle="bold"
                    android:textColor="@color/xam"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50_000"
                    android:textStyle="bold"
                    android:textColor="@color/color_fd3665"
                    android:textSize="@dimen/_16sp"
                    android:layout_marginTop="@dimen/_100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <LinearLayout
                    android:id="@+id/lnnhap_thiet_lap_chi_tieu_trong_thang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_120dp"
                    android:background="@drawable/shape_thong_tin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnSave4"
                    app:layout_constraintTop_toBottomOf="@+id/setmonthlyspending"
                    android:layout_marginEnd="@dimen/_16dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/_16dp"
                        android:background="@drawable/shape_thong_tin"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSave4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_fd3665"
                    android:text="@string/them"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lnnhap_thiet_lap_chi_tieu_trong_thang"
                    app:layout_constraintBottom_toBottomOf="@+id/lnnhap_thiet_lap_chi_tieu_trong_thang"/>

                <TextView
                    android:id="@+id/setcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thiet_lap_mau_sac"
                    android:textStyle="bold"
                    android:textColor="@color/xam"
                    android:layout_marginTop="@dimen/_50dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lnnhap_thiet_lap_chi_tieu_trong_thang"
                    />

                <TextView
                    android:id="@+id/setfontsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thiet_lap_co_chu"
                    android:textStyle="bold"
                    android:textColor="@color/xam"
                    android:layout_marginTop="@dimen/_50dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/setcolor"
                    />

                <TextView
                    android:id="@+id/datamanagement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quan_ly_du_lieu"
                    android:textStyle="bold"
                    android:textColor="@color/xam"
                    android:layout_marginTop="@dimen/_50dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/setfontsize"
                    />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noi_dung"
                    android:textColor="@color/xam"
                    android:layout_marginTop="@dimen/_16dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/datamanagement"
                    />

                <TextView
                    android:id="@+id/deletedata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_fd3665"
                    android:text="@string/xoa_du_lieu"
                    android:layout_marginTop="@dimen/_25dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ho_tro"
                    android:textStyle="bold"
                    android:textColor="@color/xam"
                    android:layout_marginTop="@dimen/_25dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deletedata"
                    />

                <TextView
                    android:id="@+id/contentsupport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noi_dung_ho_tro"
                    android:textColor="@color/xam"
                    android:layout_marginTop="@dimen/_16dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/support"
                    />

                <TextView
                    android:id="@+id/gmailsupport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/color_009CDF"
                    android:layout_marginTop="@dimen/_16dp"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contentsupport"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>