<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="@dimen/_8dp"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/dp16"
    android:paddingBottom="@dimen/_8dp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:drawableTopCompat="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/history"
        app:layout_constraintStart_toEndOf="@id/tvHome"
        app:layout_constraintEnd_toStartOf="@id/tvUpdate"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/history"
        />

    <ImageView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/update_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/report"
        app:layout_constraintStart_toEndOf="@id/tvUpdate"
        app:layout_constraintEnd_toStartOf="@id/tvSetting"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/report"
        />

    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/setting"
        />


</androidx.constraintlayout.widget.ConstraintLayout>