<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_thong_tin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_16dp"
    android:padding="@dimen/_16dp">
    
    <TextView
        android:id="@+id/tvHistoryBuyContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mua_sam"
        android:textColor="@color/xam"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvThreedots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvThreedots"
        />

    <ImageView
        android:id="@+id/tvThreedots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleType="fitXY"
        android:src="@drawable/there_dots"
        android:textColor="@color/color_fd3665"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvHistoryBuy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mua_1_lon_bia"
        android:textColor="@color/xam"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_34dp"
        android:justificationMode="inter_word"
        />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="02:58 Chiều 17/08/2024"
        android:textColor="@color/color_009CDF"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryBuy1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvspend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chi"
        android:textSize="@dimen/_16sp"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_000"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime"
        android:layout_marginTop="@dimen/_24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>